edit forms to display on IOS correctly

--- a/public/index.css
+++ b/public/index.css
@@ -175,11 +175,21 @@ select {
   background: #ffffff;
   border: 1px solid #979797;
   border-radius: 8px;
-  padding: .5rem .5rem .6rem .5rem;
+  padding: 0 .5rem 0 .5rem;
   outline: none;
   width: 100%;
+  height: 2rem;
   margin-bottom: 10px;
   box-sizing: border-box;
+}
+
+textarea {
+  font-size: 1rem;
+}
+
+input[type="date"],
+input[type="time"] {
+  min-width: 95%;
 }
 
 @media only screen and (max-width: 680px) {
